Bug 1089778 - ServiceWorkerRegistration is keyed by scope for event dispatch and invalidation. r=baku

--HG--
extra : rebase_source : 70ddb441e8146836cb340bb61985f01f9cfc719c