dom/workers/ServiceWorkerManager.h
@@ -381,7 +381,6 @@ public:
   void
   FinishFetch(ServiceWorkerRegistrationInfo* aRegistration);
 
-
   void
   HandleError(JSContext* aCx,
               const nsACString& aScope,
